--- a/HW/8월 6일/Bio.html
+++ b/HW/8월 6일/Bio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="elecPage.css" />
+    <link rel="stylesheet" href="Bio.css" />
     <link rel='icon' href='favicon.ico' />
     <title>전자기기 페이지</title>
     <title>title</title>
